media/gpu/avda_codec_image.cc
@@ -148,6 +148,7 @@ bool AVDACodecImage::SetSharedState(
   if (shared_state == shared_state_)
     return false;
   shared_state_ = shared_state;
+  most_recent_bounds_ = gfx::Rect();
   return true;
 }
 
